--- a/src/App.scss
+++ b/src/App.scss
@@ -201,7 +201,7 @@ input:disabled {
     width: 80% !important;
 }
 .w-100 {
-    width: 100%;
+    width: 100% !important;
 }
 .p-0 {
     padding: 0px !important;
