Added Ability to Open and Close Dialog Button

--- a/src/App.scss
+++ b/src/App.scss
@@ -224,6 +224,9 @@ input:disabled {
 .mb-10 {
     margin-bottom: 10px !important;
 }
+.ml-10 {
+    margin-left: 10px !important;
+}
 .m-auto {
     margin: auto !important;
 }
