Added Setup Component

--- a/src/App.scss
+++ b/src/App.scss
@@ -215,6 +215,9 @@ input:disabled {
 .m-10 {
     margin: 10px !important;
 }
+.m-20 {
+    margin: 20px !important;
+}
 .mt-10 {
     margin-top: 10px !important;
 }
