--- a/src/App.scss
+++ b/src/App.scss
@@ -203,6 +203,9 @@ input:disabled {
 .w-100 {
     width: 100% !important;
 }
+.h-100 {
+    height: 100% !important;
+}
 .p-0 {
     padding: 0px !important;
 }
