Added Dialog Box Before Deleting Invoices

--- a/src/App.scss
+++ b/src/App.scss
@@ -171,6 +171,9 @@ input:disabled {
 .small {
     font-size: 12px;
 }
+.error {
+    color: red;
+}
 .center-flex {
     display: flex;
     align-items: center;
