Improved UI and UX

--- a/src/App.scss
+++ b/src/App.scss
@@ -182,6 +182,9 @@ input:disabled {
 .w-auto {
     width: auto !important;
 }
+.border-box {
+    box-sizing: border-box !important;
+}
 .w-20 {
     width: 20% !important;
 }
