Improved UI and UX

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,10 @@ p {
     font-weight: normal;
 }
 
+.MuiTableRow-hover:hover {
+    cursor: pointer;
+}
+
 /* App Background */
 .backdrop {
     top: 0;
