--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,6 @@ input:disabled {
 .small {
     font-size: 0.8rem;
 }
-
 .w-auto {
     width: auto !important;
 }
@@ -58,7 +57,8 @@ input:disabled {
     box-sizing: border-box !important;
 }
 
-.w-100 {
+.w-100,
+.MuiAlert-message {
     width: 100% !important;
 }
 
@@ -111,6 +111,10 @@ button {
     border: none;
     cursor: pointer;
     background-color: transparent;
+}
+
+.text-center {
+    text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
